# mp4-downloader

./: .gitignore  README.md  build-linux-gui.sh  build-macos-gui.sh  build-windows-gui.ps1  install.ps1  install.sh  installer-windows.iss  mp4_downloader.py  pyproject.toml  run.py  uninstall.ps1  uninstall.sh  vd_cli.py
.github/workflows/: windows-gui-release.yml
