[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mp4-downloader"
version = "0.6.1"
description = "Desktop and console MP4/MP3 downloader powered by yt-dlp."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2026.6.9",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6",
]

[project.scripts]
vd = "vd_cli:main"

[tool.setuptools]
py-modules = ["mp4_downloader", "run", "vd_cli"]
